# GovSistem

./: .env.example  .gitignore  .pre-commit-config.yaml  ChatGov.md  GOVOUVE.md  Makefile  PROMPTGOVOUVE.md  README.md  TODO.md  assinador.txt  contab.txt  fase2.md  fases.md  front.md  imp.md  interno.md  opencode.json  plano.md  planof.md  skills-lock.json  termo-referencia-diario-oficial.md
apps/api/: Dockerfile  Dockerfile.prod  pyproject.toml  requirements.txt
apps/api/alembic/: env.py
apps/api/alembic/versions/: 258eddc9cfcd_add_closed_status_and_edition_type.py  5a6b7c8d9e0f_add_theme_config_to_organizations.py  7c8d9e0f1a2b_add_cpf_to_users.py  c1d2e3f4a5b6_add_require_password_change.py  e1f2g3h4i5j6_add_missing_indexes.py
apps/api/app/: main.py
apps/api/app/core/: auth.py  config.py  security.py  seeds.py  storage.py  tenant.py
apps/api/app/models/: __init__.py  audit_event.py  base.py  edition.py  file.py  matter.py  org_unit.py  organization.py  search_index.py  signing_credential.py  signing_document.py  signing_job.py  user.py
apps/api/app/schemas/: auth.py  edition.py  gazette.py  health.py
apps/api/app/services/: audit_export.py  edition_pdf.py  pdf_utils.py  search_indexer.py
apps/api/app/tasks/: __init__.py
apps/api/scripts/: entrypoint.sh  seed.py
apps/api/tests/: test_editions.py  test_gazette_parser.py  test_pdf_render_lock.py  test_public_download_urls.py  test_tenant_domain_resolution.py  test_users.py
modulo-diario/signer/: Dockerfile  Dockerfile.prod  pyproject.toml  requirements.txt
modulo-diario/signer/app/: __init__.py
modulo-diario/signer/app/api/: health.py  internal.py  routes.py
modulo-diario/signer/app/core/: config.py
modulo-diario/signer/app/providers/: __init__.py  a1.py  base.py  icp_brasil.py
modulo-diario/signer/app/schemas/: sign.py
modulo-diario/signer/tests/: test_health.py  test_internal_api.py  test_providers.py  test_signing.py
modulo-govsocial/api/: .env.example  Dockerfile  alembic.ini  entrypoint.sh  openapi.json  pyproject.toml  requirements.txt
modulo-govsocial/api/alembic/: env.py
modulo-govsocial/api/alembic/versions/: 001_create_govsocial_tables.py  002_create_families_persons.py  003_create_prontuario.py  004_create_acompanhamento.py  005_create_beneficios.py  006_create_acoes_coletivas.py  007_create_encaminhamentos.py  008_create_agenda.py  009_create_rma.py  010_create_importacao.py  011_create_retention.py  012_create_sicon.py  013_create_sibec.py  014_create_dados_domicilio.py  015_create_socio_tables.py  016_add_person_foto_itinerante.py  017_create_fase2_extra_tables.py  018_create_habitacional.py  019_create_limites_beneficios.py  020_create_external_shortcuts.py  021_create_domain_lookup_tables.py  022_add_agenda_schedule_tables.py  023_add_attendance_enhancements.py  024_create_ivs_tables.py  025_create_rede_protecao_tables.py  026_create_recurring_collective_benefits.py  027_create_acolhimento.py  028_create_estoque.py  029_create_signing_tables.py  030_create_unificacoes_log.py  031_create_teleatendimento.py  032_create_relatorios_config.py  033_add_cadunico_fields.py  034_add_role_alvo_notificacoes.py  035_create_ai_configs.py  036_create_notification_channel_configs.py
modulo-govsocial/api/app/: celery_app.py  main.py  tasks.py
modulo-govsocial/api/app/core/: auth.py  br_validators.py  config.py  encryption.py  problem_details.py  redis.py  security.py  seed_bulk.py  seeds.py  storage.py  text_utils.py
modulo-govsocial/api/app/middleware/: __init__.py  rate_limit.py
modulo-govsocial/api/app/models/: __init__.py  acao_coletiva.py  acolhimento.py  acompanhamento.py  agenda.py  ai_config.py  attendance.py  audit_trail.py  autenticador.py  base.py  beneficio.py  busca_ativa.py  case_file.py  case_file_attachment.py  domain.py  domain_tables.py  domicilio.py  encaminhamento.py  enums.py  estoque.py  external_shortcut.py  facial_recognition.py  family.py  habitacional.py  importacao.py  ivs.py  notificacao.py  notification_config.py  organization.py  panic_button.py  person.py  person_family_membership.py  pia.py  plano_acompanhamento.py  professional.py  professional_assignment.py  questionario.py  reception_log.py  rede_protecao.py  relatorio_config.py  (+12 more)
modulo-govsocial/api/app/schemas/: __init__.py  acoes_coletivas.py  acompanhamento.py  agenda.py  ai.py  beneficios.py  busca_ativa.py  dashboard.py  domicilio.py  encaminhamento.py  facial_recognition.py  financeiro.py  importacao.py  lgpd.py  notification_config.py  rma.py  (+9 more)
modulo-govsocial/api/scripts/: bootstrap_roles.py  seed.py
modulo-govsocial/api/tests/: conftest.py  test_acoes_coletivas.py  test_acompanhamento.py  test_agenda.py  test_audit_lgpd.py  test_beneficios.py  test_br_validators.py  test_dashboard.py  test_encaminhamentos.py  test_families_persons.py  test_health_auth.py  test_importacao.py  test_lgpd.py  test_prontuario.py  test_prontuario_pdf_texto.py  test_rbac.py  test_rma.py  test_seed_onboarding.py  test_tenant_isolation.py
(+1526 files in other folders)
