[project]
name = "doe-api"
version = "0.1.0"
description = "Diário Oficial Eletrônico - API Backend"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "redis>=5.2.0",
    "minio>=7.2.0",
    "httpx>=0.28.0",
    "bcrypt>=4.2.0",
    "pyjwt>=2.9.0",
    "python-docx>=1.2.0",
    "openpyxl>=3.1.0",
    "pypdf>=5.0.0",
    "pdfminer.six>=20231228",
    "pdf2image>=1.17.0",
    "fpdf2>=2.8.0",
    "jinja2>=3.1.0",
    "weasyprint>=62.0",
    "slowapi>=0.1.9",
    "pyotp>=2.9.0",
    "qrcode[pil]>=7.4.0",
    "python-multipart>=0.0.20",
    "bleach>=6.2.0",
    "cryptography>=43.0.0",
    "sentry-sdk>=2.19.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.7.0",
    "coverage>=7.6.0",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
per-file-ignores = {"app/core/config.py" = ["N802"], "alembic/versions/*" = ["E501", "W291", "I001"], "tests/test_authorization.py" = ["E501"], "app/api/v1/public.py" = ["E501"], "app/api/v1/mfa.py" = ["E501"], "app/api/v1/security.py" = ["E501"], "app/core/password_policy.py" = ["E501"], "app/services/legacy_importer.py" = ["E501"], "tests/test_legacy_import.py" = ["E501"]}

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
