[project]
name = "doe-signer"
version = "0.1.0"
description = "Diário Oficial Eletrônico - Serviço de Assinatura Digital"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "cryptography>=44.0.0",
    "pyopenssl>=24.3.0",
    "httpx>=0.28.0",
    "pypdf>=5.5.0",
    "fpdf2>=2.8.0",
    "python-multipart>=0.0.20",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.7.0",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
